--- a/Activity1/.travis.yml
+++ b/Activity1/.travis.yml
@@ -3,8 +3,9 @@ python:
     - "3.6"
 cache: pip 
 # command to install dependencies
-install:
- - pip install -r requirements.txt 
+before_script:
+ - easy_install distribute
+ - pip install -r requirements.txt
 # command to run tests 
 script:
 - python Activity1.py
