--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,10 @@ python:
     - "3.6"
 cache: pip 
 # command to install dependencies
-install:
-<<<<<<< HEAD
+before_script:
+ - easy_install distribute
  - pip install -r requirements.txt 
 # command to run tests 
 script:
-		- python Activity1.py
-=======
-    - pip install -r requirements.txt 
-# command to run tests 
-script:
-    - python Activity1.py
->>>>>>> d78d9a7ff1f270e0cfaedaacee5e95d28ef535c4
+		- python Activity1/Activity1.py 
+
